--- a/templates/explora.html
+++ b/templates/explora.html
@@ -73,7 +73,7 @@
             <h4> <span class="video-name">{{ video.name }} </span></h4>
             <ul>
               <li> <strong>Industria: </strong> <span class="video-name">{{ video.industry }} </span></li>
-              <li> <strong>Historia: </strong> <span class="video-name">{{ video.pride_in }} </span></li>
+              <li> <strong>El primer peso: </strong> <span class="video-name">{{ video.pride_in }} </span></li>
               <li> <strong>Desafio: </strong> <span class="video-name">{{ video.desafio }} </span></li>
               {% for meta in video.metas %}
                 {% if meta != "" %}
