--- a/templates/subir.html
+++ b/templates/subir.html
@@ -12,7 +12,7 @@
 <form action="/add" method="POST" class="form-horizontal" role="form">
   
   <div class="form-group">
-  	<label for="name" class="col-sm-4 control-label">Tu nombre</label>
+  	<label for="name" class="col-sm-4 control-label">El nombre de tu negocio</label>
   	<div class="col-sm-8">
   		<input type="text" id="name" class="form-control" name="name" placeholder="Entre su nombre" required="true"/>
   	</div>
@@ -26,7 +26,7 @@
   </div>
 
   <div class="form-group">
-  	<label for="prof" class="col-sm-4 control-label">El Nombre del negocio</label>
+  	<label for="prof" class="col-sm-4 control-label">Tu nombre</label>
   	<div class="col-sm-8">
 			<input type="text" id="prof" class="form-control" name="prof" placeholder="Entra el nombre del negocio" required="true"/>
 		</div>
