--- a/templates/explora.html
+++ b/templates/explora.html
@@ -73,8 +73,8 @@
             <h4> <span class="video-name">{{ video.name }} </span></h4>
             <ul>
               <li> <strong>Industria: </strong> <span class="video-name">{{ video.industry }} </span></li>
-              <li> <strong>El primer peso: </strong> <span class="video-name">{{ video.pride_in }} </span></li>
-              <li> <strong>Desafio: </strong> <span class="video-name">{{ video.desafio }} </span></li>
+              <li> <strong>Historia del primer peso: </strong> <span class="video-name">{{ video.pride_in }} </span></li>
+              <li> <strong>Principal Desafio: </strong> <span class="video-name">{{ video.desafio }} </span></li>
               {% for meta in video.metas %}
                 {% if meta != "" %}
                   <li><span class="video-name">Meta: {{ meta }} </span></li>
