--- a/templates/videos.html
+++ b/templates/videos.html
@@ -15,7 +15,7 @@
                 {% for video in videos %}
                     <div class="item col-lg-2">
                         {% if video.youtube_url %}
-                        <iframe width="300" height="150" src="//www.youtube.com/embed/{{ video.youtube_link }}" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="300" height="150" src="//www.youtube.com/embed/{{ video.youtube_url }}" frameborder="0" allowfullscreen></iframe>
                         {% else %}
                         <img src="{{ video.picture_url }}" width="300" height"150" alt="{{ video.prof }}">
                         {% endif %}
