--- a/templates/subir.html
+++ b/templates/subir.html
@@ -155,6 +155,7 @@
 		<label class="col-sm-4 control-label" for="youtube_url">Enlace a video</label>
 		<div class="col-sm-8">
 			<input type="text" id="name" name="youtube_url" placeholder="Entra el URL de su video de Youtube" class="form-control"/>
+			<input type="text" id="name" name="youtube_url" placeholder="Entra el URL de su video de Youtube" class="form-control"/>
 		</div>
 	</div>
 
