--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         
     <div class="container">
       <div id="map">
-          <h1>TU PRIMER <img id="sol" src="{{ url_for('static', filename='img/Sun.png') }}"></span>&nbsp;PESO</h1>
+          <h1> PRIMER<img id="sol" src="{{ url_for('static', filename='img/Sun.png') }}"></span>&nbsp;PESO</h1>
         </div>
 
       <div class="name-wrapper">
