updated the subir file with new fields, updated image in sobre, added a contact page, many other changes

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,6 +54,7 @@
                     <li><a href="/subir">Sube tu Historia</a></li>
                     <li><a href="/sobre">Sobre</a></li>
                     <li><a href="/explora">Explora las Historias</a></li>
+                    <li><a href="/contacto">Contacto</a></li>
                   </ul>
                 </div><!--/.nav-collapse -->
               </div>
