--- a/templates/videos.html
+++ b/templates/videos.html
@@ -20,6 +20,7 @@
                         <img src="{{ video.picture_url }}" width="300" height"150" alt="{{ video.prof }}">
                         {% endif %}
                         <div> <span class="video-name">{{ video.name }} </span></div>
+                        <div> <span class="video-name">{{ video.email }} </span></div>
                         <div> <span class="video-name">{{ video.industry }} </span></div>
                         <div> <span class="video-name">{{ video.pride_in }} </span></div>
                         <div> <span class="video-name">{{ video.desafio }} </span></div>
