--- a/templates/explora.html
+++ b/templates/explora.html
@@ -72,6 +72,7 @@
             </div>
             <h4> <span class="video-name">{{ video.name }} </span></h4>
             <ul>
+              <li> <strong>Email: </strong> <span class="video-name">{{ video.email }} </span></li>
               <li> <strong>Industria: </strong> <span class="video-name">{{ video.industry }} </span></li>
               <li> <strong>Historia del primer peso: </strong> <span class="video-name">{{ video.pride_in }} </span></li>
               <li> <strong>Principal Desafio: </strong> <span class="video-name">{{ video.desafio }} </span></li>
