--- a/templates/subir.html
+++ b/templates/subir.html
@@ -73,13 +73,6 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-4 control-label" for="pride_in">Cuenta la historia de tu primer cliente</label>
-		<div class="col-sm-8">
-			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="400"></textarea>
-		</div>
-	</div>
-
-	<div class="form-group">
 		<label class="col-sm-4 control-label" for="town">Municipio del negocio</label>
 		<div class="col-sm-8">
 			<select id="town" name="town" required="true" class="form-control">
@@ -131,6 +124,20 @@
 	</div>
 
 	<div class="form-group">
+		<label class="col-sm-4 control-label" for="pride_in">Describe en detalle tu desafío</label>
+		<div class="col-sm-8">
+			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="400"></textarea>
+		</div>
+	</div>
+
+		<div class="form-group">
+		<label class="col-sm-4 control-label" for="pride_in">Consejos sobre que funcionó y que no para tí</label>
+		<div class="col-sm-8">
+			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="400"></textarea>
+		</div>
+	</div>
+
+	<div class="form-group">
 		<label class="col-sm-4 control-label" for="twitter_url">Twitter</label>
 		<div class="col-sm-8">
 			<input type="text" id="name" name="twitter_url" placeholder="Entra tu nombre de Twitter" class="form-control"/>
@@ -155,7 +162,6 @@
 		<label class="col-sm-4 control-label" for="youtube_url">Enlace a video</label>
 		<div class="col-sm-8">
 			<input type="text" id="name" name="youtube_url" placeholder="Entra el URL de su video de Youtube" class="form-control"/>
-			<input type="text" id="name" name="youtube_url" placeholder="Entra el URL de su video de Youtube" class="form-control"/>
 		</div>
 	</div>
 
@@ -165,6 +171,14 @@
 			<input type="text" id="name" name="picture_url" placeholder="Entra el URL de su foto" class="form-control"/>
 		</div>
 	</div>
+
+		<div class="form-group">
+		<label class="col-sm-4 control-label" for=" password">Contraseña</label>
+		<div class="col-sm-8">
+			<input type='text' name='password' class="form-control">
+		</div>
+	</div>
+
 	<div class="col-sm-8 col-sm-offset-4">
 		<button type="submit" class="submit">Enviar</button>
 	</div>
