--- a/templates/explora.html
+++ b/templates/explora.html
@@ -65,15 +65,18 @@
           <div class="item col-lg-3">
             <div class="item-content">
             {% if video.youtube_url %}
-              <iframe width="325" height="260" src="//www.youtube.com/embed/{{ video.youtube_url }}" frameborder="0" allowfullscreen></iframe> <script>console.log(video.youtube_url);</script>
+              <iframe width="325" height="260" src="//www.youtube.com/embed/{{ video.youtube_url }}" frameborder="0" allowfullscreen></iframe>
             {% else %}
               <img src="{{ video.picture_url }}" style="height:260px;width:325px"   alt="{{ video.prof }}">
             {% endif %}
             </div>
             <h4> <span class="video-name">{{ video.name }} </span></h4>
-            <ul>
-              <li> <strong>Email: </strong> <span class="video-name">{{ video.email }} </span></li>
-              <li> <strong>Industria: </strong> <span class="video-name">{{ video.industry }} </span></li>
+            <ul class="explora-list">
+              <li> <strong>Email: </strong> 
+                <span class="video-name"><a href="mailto:{{ video.email }}">{{ video.email }} </a></span>
+              </li>
+              <li> 
+                <strong>Industria: </strong> <span class="video-name">{{ video.industry }} </span></li>
               <li> <strong>Principal Desafio: </strong> <span class="video-name">{{ video.desafio }} </span></li>
               {% for meta in video.metas %}
                 {% if meta != "" %}
