--- a/templates/subir.html
+++ b/templates/subir.html
@@ -175,7 +175,7 @@
 		<div class="form-group">
 		<label class="col-sm-4 control-label" for=" password">Contraseña</label>
 		<div class="col-sm-8">
-			<input type='text' name='password' class="form-control">
+			<input type='password' name='password' class="form-control">
 		</div>
 	</div>
 
