Changes in contact page

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -9,7 +9,7 @@
   <div class="col-lg-4">
         <h2>Este es un proyecto de Brands of Puerto Rico y Code for America. Envianos un email para contactarte con nosotros.</h2>
     <div class="form-group">
-    <label for="email" class="col-sm-4 control-label">Dirección de email</label>
+    <label for="email" class="col-sm-4 control-label">puertorico@codeforamerica.org</label>
      <div class="col-sm-8">
       <input type="email" class="form-control" name="email" placeholder="Entre su email" required="true"/>
       </div>
