Change to contact form

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -14,7 +14,7 @@
 
 
         <!-- Form Name -->
-        <legend class="contact-legend">Contactenos</legend>
+        <legend class="contact-legend">Contactanos</legend>
 
         <!-- Text input-->
         <div class="control-group">
@@ -26,7 +26,7 @@
 
         <!-- Text input-->
         <div class="control-group">
-          <label class="control-label" for="email">Correl Electronico</label>
+          <label class="control-label" for="email">Correo Electrónico</label>
           <div class="controls">
             <input id="email" name="email" type="text" placeholder="Entre su correo electronico" class="form-control" required="">
           </div>
@@ -34,7 +34,7 @@
 
         <!-- Select Basic -->
         <div class="control-group">
-          <label class="control-label" for="tema">Razon de contacto</label>
+          <label class="control-label" for="tema">Razón de contacto</label>
           <div class="controls">
             <select id="subject" name="subject" class="form-control">
               <option value="General Topic">General</option>
@@ -47,7 +47,7 @@
 
         <!-- Textarea -->
         <div class="control-group">
-          <label class="control-label" for="msg">Mensage</label>
+          <label class="control-label" for="msg">Mensaje</label>
           <div class="controls">                     
             <textarea id="msg" class="form-control" name="msg"></textarea>
           </div>
