Changing text in sobre and photo

--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -5,23 +5,27 @@
 	<!-- any local css/styling should be put here -->
 {% endblock %}
 {% block content %}
-    
-      <div class="col-lg-4">
-        <h2>Conectate con pequeños empresarios como tu</h2>
-        <p>Comparte la historia de como obtuviste y que hiciste con tu primer peso.</p>
-      </div>
-      <div class="col-lg-4">
-       	<h2>Aprende de tus pares</h2>
-        <p>Conectate y aprende de empresarios que persiguen los mismos objetivos o se encuentran ante los mismos retos.</p>
-      </div>
-      <div class="col-lg-4">
-       	<h2>Promociona tu iniciativa</h2>
-        <p>Construye conexiones profesionales y descubre diferentes estrategias de negocios.</p>
-      </div>
+
+    <div>
      <div class="row"> 
      <div class="col-lg-12">    
      <img class="sobre-image" src="{{ url_for('static', filename='img/smallbiz.jpg') }}"></div>
+    </div>
+      <div class="col-lg-4">
+        <h2>Conectate con pequeños empresarios como tu</h2>
+        <p>No estas solo, son miles los empresarios boricuas que se levantan a diario para trabajar por el beneficio de nuestro país. En esta plataforma podrás conocer sus historias, compartir la tuya y empezar un intercambio de conocimiento con una red de empresarios igual que tu. Te invitamos a ser parte de nuestra iniciativa.
+        </p>
+      </div>
+      <div class="col-lg-4">
+       	<h2>Aprende de tus pares</h2>
+        <p>Cada empresa es una historia por si sola. Toda idea de negocios conlleva una serie de circunstancias, problemas y obstáculos por sobrepasar. Lo bueno es que en nuestras historias encontraras soluciones a tus problemas. Los empresarios en Puerto Rico tienen que pasar por procesos y situaciones similares para sacar su empresa a flote. Ahora podrás aprender del esfuerzo de otros y ser más eficiente en tus inversiones.
+        </p>
+      </div>
+      <div class="col-lg-4">
+       	<h2>Promociona tu iniciativa</h2>
+        <p>Uno de los retos más difíciles para cualquier empresario es hacer que el mercado conozca tu marca y producto. Al subir y compartir, en las redes sociales, la historia de tu negocio podrás gozar del trafico generado por el contenido dentro de nuestra plataforma y por otros nuestros canales. Gente de todo Puerto Rico podrá conocer tu marca; colegas de la industria, posibles clientes y posibles inversionistas. Sube tu historia y nosotros te ayudamos a regar la voz.
+      </p>
   </div>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 {% endblock %}
