--- a/static/css/normalize.css
+++ b/static/css/normalize.css
@@ -219,7 +219,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: monospace, serif;
+    font-family: helvetica;
     _font-family: 'courier new', monospace;
     font-size: 1em;
 }
