Chamging font to opens sans

--- a/templates/404.html
+++ b/templates/404.html
@@ -26,7 +26,7 @@
 
             html,
             input {
-                font-family: "Helvetica Neue", Helvetica,;
+                font-family: "open sans", open sans,;
             }
 
             body {
