--- a/static/css/normalize.css
+++ b/static/css/normalize.css
@@ -81,7 +81,7 @@ button,
 input,
 select,
 textarea {
-    font-family: open sans;
+    font-family: monserrat, sans serif;
 }
 
 /**
@@ -219,7 +219,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: open sans;
+    font-family: monserrat, sans serif;
     _font-family: 'courier new', monospace;
     font-size: 1em;
 }
