--- a/templates/404.html
+++ b/templates/404.html
@@ -26,7 +26,7 @@
 
             html,
             input {
-                font-family: "open sans", open sans,;
+                font-family: "monserrat, sans serif",;
             }
 
             body {
