--- a/static/components/bootstrap/less/variables.less
+++ b/static/components/bootstrap/less/variables.less
@@ -39,7 +39,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  "monserrat, sans serif", monserrat, sans serif, Arial, sans-serif;
+@font-family-sans-serif:  Montserrat, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
