--- a/templates/404.html
+++ b/templates/404.html
@@ -26,7 +26,7 @@
 
             html,
             input {
-                font-family: "monserrat, sans serif",;
+                font-family: 'Montserrat', sans-serif;
             }
 
             body {
