Changing image size and text in landing

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         
     <div class="container">
       <div id="map">
-          <h1> HEROES DE<img id="sol" src="{{ url_for('static', filename='img/Sun.png') }}"></span>&nbsp;PUERTO RICO</h1>
+          <h2> HEROES DE PUERTO RICO</h2>
         </div>
 
       <div class="name-wrapper">
