--- a/static/css/orgullopr.css
+++ b/static/css/orgullopr.css
@@ -525,8 +525,10 @@ button.submit:active {
 .sobre-image {
     margin-top: 2px;
     padding-top: 1px;
-    width: 100%;
-}
+    width: 70%;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
 
 
 /* Explora styles */
