--- a/static/css/orgullopr.css
+++ b/static/css/orgullopr.css
@@ -451,7 +451,8 @@ button.submit:active {
     font-weight: 800;
     letter-spacing: 2pt;
     margin: 20px;
-    padding: 10px;
+    padding: 50px;
+    height: 110px;
 
 }
 
