--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
         
     <div class="container">
       <div id="map">
-       <h1> HEROES DE PUERTO RICO</h1>
+       <h1>HEROES <img src="/static/img/logo.png" style="width:auto;">PUERTO RICO</h1>
+        
       </div>
 
       <div class="name-wrapper">
