Changing background color and fixing vimeo

--- a/static/css/orgullopr.css
+++ b/static/css/orgullopr.css
@@ -19,7 +19,7 @@
 }
 /* layout.html start */
 body {
-    background-color: rgba(72,91,210,1);
+    background-color: #31689B;
     font-family: 'Montserrat', sans-serif;
     color: white;
     text-align: left;
