Changing width of video,changing font size for video container and fixing links to social media

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -20,7 +20,7 @@
         <div class="control-group">
           <label class="control-label" for="name">Nombre</label>
           <div class="controls">
-            <input id="name" name="name" type="text" placeholder="Entre su nombre" class="form-control" required="">
+            <input id="name" name="name" type="text" placeholder="Entra tu nombre" class="form-control" required="">
           </div>
         </div>
 
@@ -28,7 +28,7 @@
         <div class="control-group">
           <label class="control-label" for="email">Correo Electrónico</label>
           <div class="controls">
-            <input id="email" name="email" type="text" placeholder="Entre su correo electronico" class="form-control" required="">
+            <input id="email" name="email" type="text" placeholder="Entra tu correo electrónico" class="form-control" required="">
           </div>
         </div>
 
