--- a/templates/subir.html
+++ b/templates/subir.html
@@ -14,14 +14,14 @@
   <div class="form-group">
   	<label for="name" class="col-sm-4 control-label">El nombre de tu negocio</label>
   	<div class="col-sm-8">
-  		<input type="text" id="name" class="form-control" name="name" placeholder="Entre su nombre" required="true"/>
+  		<input type="text" id="name" class="form-control" name="name" placeholder="Entra tu nombre" required="true"/>
   	</div>
   </div>
   
   <div class="form-group">
   	<label for="email" class="col-sm-4 control-label">Tu email</label>
   	<div class="col-sm-8">
-  		<input type="email" class="form-control" name="email" placeholder="Entre su email" required="true"/>
+  		<input type="email" class="form-control" name="email" placeholder="Entra tu email" required="true"/>
   	</div>
   </div>
 
@@ -126,7 +126,7 @@
 	<div class="form-group">
 		<label class="col-sm-4 control-label" for="pride_in">Describe en detalle tu desafío</label>
 		<div class="col-sm-8">
-			<textarea name="pride_in" cols="50" rows="6" class="form-control" maxlength="400"></textarea>
+			<textarea name="pride_in" cols="50" rows="6" class="form-control" required="true" maxlength="400"></textarea>
 		</div>
 	</div>
 <!--
@@ -140,20 +140,20 @@
 	<div class="form-group">
 		<label class="col-sm-4 control-label" for="twitter_url">Twitter</label>
 		<div class="col-sm-8">
-			<input type="text" id="name" name="twitter_url" placeholder="Entra tu nombre de Twitter" class="form-control"/>
+			<input type="text" id="name" name="twitter_url" placeholder="Utiliza https://twitter.com/" class="form-control"/>
 	 </div>
 	</div>
 	<div class="form-group">
 		<label class="col-sm-4 control-label" for="website_url">Website</label>
 		<div class="col-sm-8">
-			<input type="text" id="name" name="website_url" placeholder="Entra la URL de su página web" class="form-control"/>
+			<input type="text" id="name" name="website_url" placeholder="Utiliza https://www." class="form-control"/>
 	 </div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-sm-4 control-label" for="facebook_url">Facebook</label>
 		<div class="col-sm-8">
-			<input type="text" id="name" name="facebook_url" placeholder="Entra la URL de su página de facebook" class="form-control"/>
+			<input type="text" id="name" name="facebook_url" placeholder="Utiliza https://www.facebook.com/" class="form-control"/>
 
 	 </div>
 	</div>		
@@ -161,28 +161,29 @@
 	<div class="form-group">
 		<label class="col-sm-4 control-label" for="youtube_url">Enlace a video</label>
 		<div class="col-sm-8">
-			<input type="text" id="name" name="youtube_url" placeholder="Entra el URL de su video de Youtube" class="form-control"/>
+			<input type="text" id="name" name="youtube_url" placeholder="Entra el URL de tu video de Youtube" class="form-control"/>
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-sm-4 control-label" for="picture_url">Enlace a foto</label>
 		<div class="col-sm-8">
-			<input type="text" id="name" name="picture_url" placeholder="Entra el URL de su foto" class="form-control"/>
+			<input type="text" id="name" name="picture_url" placeholder="Entra el URL de tu foto" class="form-control" maxlength="400" required="true"/>
+
 		</div>
 	</div>
-
+    <!--
 		<div class="form-group">
 		<label class="col-sm-4 control-label" for=" password">Contraseña</label>
 		<div class="col-sm-8">
 			<input type='password' name='password' class="form-control">
 		</div>
 	</div>
-
+    !-->	
 	<div class="col-sm-8 col-sm-offset-4">
 		<button type="submit" class="submit">Enviar</button>
 	</div>
-		
+   	
 </form>
 </div></div></div></div>
 {% endblock %}	
